# ralphgen

./: .gitignore  README.md  app.js  download_ralph.py  index.html  main.py  package-lock.json  package.json  playwright.config.ts  prd.json  progress.txt  pyproject.toml  server.py  styles.css  test-addtext.mjs  test_download_ralph.py  tsconfig.json  tsconfig.test.json  z_image_server.py
gallery/: index.json
playwright-report/: index.html
scripts/ralph/: progress.txt
tasks/: prd-ralph-wiggum-meme-generator.md
tests/: meme-editor.spec.ts
